# testXmlYaml

./: .dockerignore  .gitignore  1716205933.json  Dockerfile  README.md  conftest.py  main.py  pyproject.toml  requirements.txt
parser/: __init__.py  base.py  parse_xml.py  parse_yaml.py
tests/: test_xml_parser.py  test_yaml_parser.py
